application-workloads/informatica/informatica-adf-hdinsight-powerbi/nested/info-nsg.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "location": {
      "type": "string",
      "defaultValue": "westus",
      "allowedValues": [
        "brazilsouth",
        "eastasia",
        "eastus",
        "japaneast",
        "japanwest",
        "northcentralus",
        "northeurope",
        "southcentralus",
        "westeurope",
        "westus",
        "southeastasia",
        "centralus",
        "eastus2"
      ],
      "metadata": {
        "description": "Deployments Location"
      }
    },
    "networkApiVersion": {
      "type": "string",
      "defaultValue": "2016-03-30",
      "allowedValues": [
        "2015-05-01-preview",
        "2015-06-15",
        "2016-03-30"
      ],
      "metadata": {
        "description": "API Version for the Network Resources"
      }
    },
    "tag": {
      "type": "object",
      "defaultValue": {
        "key1": "key",
        "value1": "value"
      }
    },
    "networkSecurityGroupsName": {
      "type": "string",
      "defaultValue": "wowza-nsg",
      "metadata": {
        "description": " Virtual machine name"
      }
    },
    "informaticaTags": {
      "type": "object"
    },
    "quickstartTags": {
      "type": "object"
    }
  },
  "variables": {},
  "resources": [
    {
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('networkSecurityGroupsName')]",
      "apiVersion": "2016-03-30",
      "location": "[parameters('location')]",
      "tags": {
        "[parameters('tag').key1]": "[parameters('tag').value1]",
        "quickstartName": "[parameters('quickstartTags').name]",
        "provider": "[parameters('informaticaTags').provider]"
      },
      "properties": {
        "securityRules": [
          {
            "name": "HTTP",
            "properties": {
              "priority": 1010,
              "sourceAddressPrefix": "*",
              "protocol": "Tcp",
              "destinationPortRange": "80",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          },
          {
            "name": "default-allow-rdp",
            "properties": {
              "priority": 1020,
              "sourceAddressPrefix": "*",
              "protocol": "Tcp",
              "destinationPortRange": "3389",
              "access": "Allow",
              "direction": "Inbound",
              "sourcePortRange": "*",
              "destinationAddressPrefix": "*"
            }
          }
        ]
      }
    }
  ]
}
